@@ -4,6 +4,8 @@ Release 0.8.0 - unreleased
 
   NEW FEATURES
 
+    TAJO-348: Implement octet_length(text). (DaeMyung Kang via jaehwa)
+
     TAJO-357: Fix invalid filename TestMethFunction to TestMathFUnction.
     (DaeMyung Kang via hyunsik)
 
